--- a/BaseProject/BaseProject/Features/Home/View/HomeViewController.xib
+++ b/BaseProject/BaseProject/Features/Home/View/HomeViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="BaseProject" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="D4c-fv-qD0" id="vdT-f2-4r4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,7 +20,18 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="0.98624559860000005" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="D4c-fv-qD0">
+                    <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
+            <constraints>
+                <constraint firstItem="D4c-fv-qD0" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="0ag-AB-TA1"/>
+                <constraint firstItem="D4c-fv-qD0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="3Po-pn-bT1"/>
+                <constraint firstItem="D4c-fv-qD0" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="PMM-Du-qyk"/>
+                <constraint firstItem="D4c-fv-qD0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="tsu-fK-1Tw"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
